--- a/aham-fund-management-system/package.json
+++ b/aham-fund-management-system/package.json
@@ -6,15 +6,38 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "ag-grid-community": "^30.1.0",
+    "ag-grid-vue3": "^30.1.0",
+    "axios": "^1.5.0",
+    "vue": "^3.3.4",
+    "vuetify": "^3.3.23",
+    "vue-router": "^4.2.4",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.3.2",
+    "@tsconfig/node18": "^18.2.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/test-utils": "^2.4.1",
+    "resize-observer-polyfill": "^1.5.1",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/tsconfig": "^0.4.0",
+    "eslint": "^8.46.0",
+    "eslint-plugin-vue": "^9.16.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.0.0",
+    "sass": "^1.66.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vitest": "^0.34.6",
     "vue-tsc": "^1.8.5"
   }
 }
