--- a/aham-fund-management-system/package.json
+++ b/aham-fund-management-system/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
@@ -13,13 +13,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.3.67",
     "ag-grid-community": "^30.1.0",
     "ag-grid-vue3": "^30.1.0",
     "axios": "^1.5.0",
     "js-cookie": "^3.0.5",
+    "sass-loader": "^13.3.2",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vue-sweetalert2": "^5.0.5",
+    "vue-tabler-icons": "^2.21.0",
     "vuetify": "^3.3.23"
   },
   "devDependencies": {
